--- a/_posts/blog/2014-08-12-docker.md
+++ b/_posts/blog/2014-08-12-docker.md
@@ -42,6 +42,11 @@ Fedora EPEL源配置
 
 ### 使用Container
 
+- <code>docker ps</code>	List containers
+- <code>docker logs</code>  Shows us the standard output of a container.
+- <code>docker stop</code>  Stops running containers.
+
+
 ### 使用Images
 
 显示所有的images
@@ -55,4 +60,56 @@ Fedora EPEL源配置
 运行一个container
 
 	docker run -t -i centos /bin/bash
+
+创建自己的image
+1. 从已有的image创建容器，修改容器内容，并提交至image
+2. 使用<code>Dockerfile</code>文件制定一系列指令来创建Image
+
+	$ mkdir sinatra
+	$ cd sinatra
+	$ touch Dockerfile
+
+Dockerfile的文件格式
+
+	# This is a comment
+	FROM ubuntu:14.04
+	MAINTAINER Kate Smith <ksmith@example.com>
+	RUN apt-get -qq update
+	RUN apt-get -qqy install ruby ruby-dev
+	RUN gem install sinatra
+
+使用<code>docker build</code>命令创建image
+
+	docker build -t="ouruser/sinatra:v2" .
+
+使用<code>docker push</code>命令向[Docker Hub](https://hub.docker.com)提交Image
+	
+	docker push ouruser/sinatra
+
+从系统中删除image
+	
+	docker rmi training/sinatra
+
+
+保存/恢复镜像
+	
+	docker save -o="xx.tar.gz" IMAGE
+	docker load < xx.tar.gz
+
+### Container vs Image
+
+Each container is built from a base image. A container is an instance of an Image.
+
+You can create an image from a container
+
+![docker结构](../../images/blog/docker/docker_1.png)
+
+image是只读的，container可写。
+
+通过<code>docker commit</code>命令可以将container压制为一个image
+
+
+### 网络
+
+### 文件系统
 
