--- a/_posts/blog/2014-10-21-ant.md
+++ b/_posts/blog/2014-10-21-ant.md
@@ -6,3 +6,28 @@ category: blog
 ---
 
 ## 生成jar包
+
+
+## ant-Contrib 
+### 条件判断
+```
+
+```
+
+## 文本操作
+### 从文件读取内容，并过滤
+```
+<loadfile srcfile="${basedir}/update_pkg/temp/windows/cupid/webapp/oem/i18n/oem.properties" property="oem.file">
+	<filterchain>
+		<tokenfilter>
+		    <containsregex pattern="compile.time=" flags="i"/>
+		</tokenfilter>
+		<striplinebreaks />  <!-- 过滤换行符 -->
+	</filterchain>
+</loadfile>
+<propertyregex property="compile.time" input="${oem.file}" regexp="compile.time=(.*)$" select="\1" />
+```
+
+
+<loadresource />
+<loadproperties />
